Fix a bug that warning section overflows

--- a/src/warningSection/warningSection.module.css
+++ b/src/warningSection/warningSection.module.css
@@ -4,4 +4,5 @@
     border: 3px solid red;
     padding: 10px;
     margin: 0px 0px 20px 0px;
+    max-width: calc(100vw - 40px);
 }
